fixed bug where not all reservation buttons weren't visible. Added a vertical scrollbar for the reservation buttons. Buttons will now be disabled if another user has already reserved a seat at that time. Backend and frontend should work seamlessly together now.

--- a/styles/reservations.css
+++ b/styles/reservations.css
@@ -71,10 +71,20 @@ main .reserve-container #available-reservation-times {
     width: 30%;
     margin: auto;
     margin-top: 30px;
+    overflow-y: auto;
+    min-width: 600px;
+    max-width: 600px;
+    height: 400px;
 }
 
 main .reserve-container #available-reservation-times .reservation-btn {
     width: 150px;
     height: 50px;
     margin: 20px;
+}
+
+#disabled {
+    color: #505050;
+    cursor: not-allowed;
+    pointer-events: none;
 }
